made property page-description &-title &-text in style.scss and deleted him in some scss files, changed names classes in html some files

--- a/src/amocrm.html
+++ b/src/amocrm.html
@@ -23,12 +23,10 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="amocrm-description container">
-            <p class="amocrm-description-text">Отличное решение для автоматизации вашего отдела продаж, который позволит не потерять ни одной заявки и мгновенно реагировать на них. Время – главный фактор качества общения с клиентами. Если вы отвечаете пользователю в течение 30 минут, то вы неплохо справляетесь, а если через неделю, то есть над чем работать.</p>
-            <p class="amocrm-description-text">Исследования показывают положительную корреляцию между быстрым временем отклика и высоким уровнем удовлетворенности. По данным Forrester Research, 77% клиентов говорят, что экономия их времени — это самый важный фактор хорошего обслуживания в Интернете. С помощью amoCRM можно не только быстро реагировать на поступающие заявки, но и наладить связь с клиентом, максимально упростить его путь, сделав его быстрым, четким и простым.</p>
+        <div class="page-description container">
+            <p class="page-description-text">Отличное решение для автоматизации вашего отдела продаж, который позволит не потерять ни одной заявки и мгновенно реагировать на них. Время – главный фактор качества общения с клиентами. Если вы отвечаете пользователю в течение 30 минут, то вы неплохо справляетесь, а если через неделю, то есть над чем работать.</p>
+            <p class="page-description-text">Исследования показывают положительную корреляцию между быстрым временем отклика и высоким уровнем удовлетворенности. По данным Forrester Research, 77% клиентов говорят, что экономия их времени — это самый важный фактор хорошего обслуживания в Интернете. С помощью amoCRM можно не только быстро реагировать на поступающие заявки, но и наладить связь с клиентом, максимально упростить его путь, сделав его быстрым, четким и простым.</p>
         </div>
-
-        <hr/>
 
         <div class="page-list-block">
             <div class="page-list-block-block container">
