--- a/src/analysis.html
+++ b/src/analysis.html
@@ -23,7 +23,9 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="analysis-description container">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</div>
+        <div class="page-description container">
+            <p class="page-description-text">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</p>
+        </div>
 
         <div class="analysis-modeling">
             <div class="analysis-modeling-cont container">
