--- a/src/crm-implement.html
+++ b/src/crm-implement.html
@@ -24,10 +24,10 @@
         @@include('html/all-pages/headerConsultation.html',{})
 
         <div class="crm-implement-bitrix">
-            <div class="crm-implement-bitrix-container container">
-                <p class="crm-implement-bitrix-title">Битрикс24 CRM</p>
-                <p class="crm-implement-bitrix-text">Битрикс24 CRM, позволяющая продавать больше. Битрикс24 помогает как небольшим, так и крупным компаниям работать эффективнее, объединив в единой платформе десятки сервисов и приложений для организации работы всей компании.</p>
-                <p class="crm-implement-bitrix-text">Наши сертифицированные специалисты имеют большой опыт в внедрении и доработке CRM от начала планирования до непосредственного внедрения и настройки.</p>
+            <div class="page-description container">
+                <p class="page-description-title">Битрикс24 CRM</p>
+                <p class="page-description-text">Битрикс24 CRM, позволяющая продавать больше. Битрикс24 помогает как небольшим, так и крупным компаниям работать эффективнее, объединив в единой платформе десятки сервисов и приложений для организации работы всей компании.</p>
+                <p class="page-description-text">Наши сертифицированные специалисты имеют большой опыт в внедрении и доработке CRM от начала планирования до непосредственного внедрения и настройки.</p>
             </div>
         </div>
 
