--- a/src/optimization.html
+++ b/src/optimization.html
@@ -51,10 +51,10 @@
 <!--                    <img src="img/optimization/product-item.png" alt="product-item"/>-->
                 </div>
 
-                <div class="optimization-content-description">
-                    <p class="content-description-title">Как оптимизировать карточку товара для поиска</p>
-                    <p class="content-description-text">Товарные карточки — основной тип страниц в интернет-магазине, от которых зависит эффективность торговли. Задача карточки — комфортная и прозрачная для пользователя покупка, поэтому каждый элемент структуры здесь имеет значение.</p>
-                    <p class="content-description-text">Но не только четкая структура делает товарную карточку эффективным инструментом продаж. Необходимо понравиться поисковым системам, чтобы они высоко ранжировали ваши страницы по релевантным коммерческим запросам. Для этого нужна SEO-оптимизация карточки товара, что это такое и как ее провести, мы расскажем в этой статье.</p>
+                <div class="page-description">
+                    <p class="page-description-title">Как оптимизировать карточку товара для поиска</p>
+                    <p class="page-description-text">Товарные карточки — основной тип страниц в интернет-магазине, от которых зависит эффективность торговли. Задача карточки — комфортная и прозрачная для пользователя покупка, поэтому каждый элемент структуры здесь имеет значение.</p>
+                    <p class="page-description-text">Но не только четкая структура делает товарную карточку эффективным инструментом продаж. Необходимо понравиться поисковым системам, чтобы они высоко ранжировали ваши страницы по релевантным коммерческим запросам. Для этого нужна SEO-оптимизация карточки товара, что это такое и как ее провести, мы расскажем в этой статье.</p>
                 </div>
 
                 <div class="optimization-content-main">
@@ -66,7 +66,7 @@
                     </div>
 
                     <img class="main-optimization-img" src="img/optimization/image%2011.png" alt="image"/>
-                    <p class="main-optimization-text">SEO (Search Engine Optimization) — это оптимизация контента под требования поисковых систем. Существует целый ряд параметров, по которым поисковик определяет качественный сайт с релевантной страницей, которую не грех вывести на первые строчки поисковой выдачи. Интернет-магазинам тоже необходимо SEO для привлечения трафика из поисковых систем и повышения качества пользовательского опыта.</p>
+                    <p class="page-description-text">SEO (Search Engine Optimization) — это оптимизация контента под требования поисковых систем. Существует целый ряд параметров, по которым поисковик определяет качественный сайт с релевантной страницей, которую не грех вывести на первые строчки поисковой выдачи. Интернет-магазинам тоже необходимо SEO для привлечения трафика из поисковых систем и повышения качества пользовательского опыта.</p>
 
                     <div class="main-optimization-block">
                         <a name="algorithm"></a>
@@ -74,7 +74,7 @@
                         <p class="main-optimization-subtitle">Специальный алгоритм</p>
                     </div>
 
-                    <p class="main-optimization-text">Чтобы понять, как работает SEO, нужно знать алгоритмы работы поисковиков. Когда пользователь хочет найти товар в интернете, он формулирует свой запрос и вводит его в поисковую строку Яндекса, Google или маркетплейса. Алгоритмы системы обрабатывают фразу и ищут в своей базе данных наиболее релевантный и качественный ответ. Свой анализ они проводят на основе ключевых слов, которые помогают роботам понять, что именно ищет пользователь и какой у его запроса интент.</p>
+                    <p class="page-description-text">Чтобы понять, как работает SEO, нужно знать алгоритмы работы поисковиков. Когда пользователь хочет найти товар в интернете, он формулирует свой запрос и вводит его в поисковую строку Яндекса, Google или маркетплейса. Алгоритмы системы обрабатывают фразу и ищут в своей базе данных наиболее релевантный и качественный ответ. Свой анализ они проводят на основе ключевых слов, которые помогают роботам понять, что именно ищет пользователь и какой у его запроса интент.</p>
 
                     <a name="intent"></a>
                     <div class="main-optimization-block">
@@ -83,8 +83,8 @@
                     </div>
 
                     <img class="main-optimization-img" src="img/optimization/image%2012.png" alt="image"/>
-                    <p class="main-optimization-text">Интент — это намерение, посыл, с которым человек обращается к поисковой системе. У запроса с одним и тем же основным ключом интенты могут отличаться. Сравните: «яичная маска для волос в домашних условиях» и «купить яичную маску для волос фирмы “Заря”». Интенты этих двух запросов различаются, поэтому и результаты поисковой выдачи будут разными.</p>
-                    <p class="main-optimization-text">Чем выше поисковик оценит качество и релевантность карточки товара, тем выше ее ранжирование. А пользователи охотнее переходят по ссылкам в первых строчках топа выдачи. Чтобы карточка выпадала в первой десятке, ее необходимо оптимизировать: подстроиться под требования поисковиков.</p>
+                    <p class="page-description-text">Интент — это намерение, посыл, с которым человек обращается к поисковой системе. У запроса с одним и тем же основным ключом интенты могут отличаться. Сравните: «яичная маска для волос в домашних условиях» и «купить яичную маску для волос фирмы “Заря”». Интенты этих двух запросов различаются, поэтому и результаты поисковой выдачи будут разными.</p>
+                    <p class="page-description-text">Чем выше поисковик оценит качество и релевантность карточки товара, тем выше ее ранжирование. А пользователи охотнее переходят по ссылкам в первых строчках топа выдачи. Чтобы карточка выпадала в первой десятке, ее необходимо оптимизировать: подстроиться под требования поисковиков.</p>
                 </div>
 
                 <a name="whatDoes"></a>
@@ -145,17 +145,17 @@
                         <p class="main-optimization-title">SEO-заполнение карточки товара</p>
                     </div>
 
-                    <p class="main-optimization-text">Для продвижения в топ интернет-магазина придется шаг за шагом причесывать каждый элемент всех товарных страниц. Мы составили чек-лист «Как оптимизировать карточку товара» из 20 пунктов, реализуя которые, вы постепенно выведете свой магазин в топ поисковой выдачи.</p>
+                    <p class="page-description-text">Для продвижения в топ интернет-магазина придется шаг за шагом причесывать каждый элемент всех товарных страниц. Мы составили чек-лист «Как оптимизировать карточку товара» из 20 пунктов, реализуя которые, вы постепенно выведете свой магазин в топ поисковой выдачи.</p>
 
                     <div class="optimization-quotes">
                         <img class="optimization-quotes-img" src="img/optimization/quotes.svg" alt="quotes"/>
                         <span class="optimization-quotes-text">Призыв к действию — название товара — бренд — особые характеристики — название магазина.</span>
                     </div>
 
-                    <p class="main-optimization-text">Например: «Купить стиральную машину активаторного типа “Малютка” с отжимом — ТД “Прачка”».</p>
-                    <p class="main-optimization-text">Description — краткое описание товара для поисковой системы. Этот небольшой текст часто подтягивается в сниппет в качестве представления страницы. Здесь тоже нужно использовать ключевые слова, добавить преимущества, информацию о доставке и гарантиях, цену, призыв к действию. Description должен быть информативным и полезным для потенциального покупателя.</p>
-                    <p class="main-optimization-text">Заголовок первого уровня H1 — это название товарной карточки, которое пользователь видит на интернет-странице. Заголовок H1 не должен совпадать с Title: это теги для разных задач. Если Title в первую очередь, для робота, то H1 — для людей. Чтобы живого пользователя не отвернуло от вашего сайта с первых секунд, делайте заголовки H1 ориентированными на человека. Убирайте топорные формулировки со словами «купить», «заказать» и оставляйте полное название товара.</p>
-                    <p class="main-optimization-text">В оптимизации мета-тегов главное не переусердствовать с ключами.</p>
+                    <p class="page-description-text">Например: «Купить стиральную машину активаторного типа “Малютка” с отжимом — ТД “Прачка”».</p>
+                    <p class="page-description-text">Description — краткое описание товара для поисковой системы. Этот небольшой текст часто подтягивается в сниппет в качестве представления страницы. Здесь тоже нужно использовать ключевые слова, добавить преимущества, информацию о доставке и гарантиях, цену, призыв к действию. Description должен быть информативным и полезным для потенциального покупателя.</p>
+                    <p class="page-description-text">Заголовок первого уровня H1 — это название товарной карточки, которое пользователь видит на интернет-странице. Заголовок H1 не должен совпадать с Title: это теги для разных задач. Если Title в первую очередь, для робота, то H1 — для людей. Чтобы живого пользователя не отвернуло от вашего сайта с первых секунд, делайте заголовки H1 ориентированными на человека. Убирайте топорные формулировки со словами «купить», «заказать» и оставляйте полное название товара.</p>
+                    <p class="page-description-text">В оптимизации мета-тегов главное не переусердствовать с ключами.</p>
                 </div>
 
                 <a class="optimization-back-href" href="blog.html">
