--- a/src/support.html
+++ b/src/support.html
@@ -27,8 +27,8 @@
             </button>
         </div>
 
-        <div class="support-text">
-            <p class="support-text-cont container">Наша команда сертифицированных специалистов оказывает сопровождение и техническую поддержку сайтов на любой стадии работы, даже если разработчиком являемся не мы. Доведем до результата ваш сайт и/или улучшим его, интегрируем ПО. У нас представлены разные пакеты услуг по функционалу сопровождения и технической поддержки. Мы постоянно повышаем качество обслуживания наших клиентов и честно относимся к ним, внедряем гибкие методики управления и реагирования на проблемы.</p>
+        <div class="page-description">
+            <p class="page-description-text container">Наша команда сертифицированных специалистов оказывает сопровождение и техническую поддержку сайтов на любой стадии работы, даже если разработчиком являемся не мы. Доведем до результата ваш сайт и/или улучшим его, интегрируем ПО. У нас представлены разные пакеты услуг по функционалу сопровождения и технической поддержки. Мы постоянно повышаем качество обслуживания наших клиентов и честно относимся к ним, внедряем гибкие методики управления и реагирования на проблемы.</p>
         </div>
 
         <div class="support-gallery">
