--- a/src/automation.html
+++ b/src/automation.html
@@ -22,7 +22,9 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="automation-description container">Автоматизация и цифровизация бизнеса- это самое эффективное вложение в бизнес сегодня. В любом бизнесе сейчас собирается много данных и они открывают интересные перспективы для работы с клиентами и не только: можно совершать допродажи, сегментировать, планировать акции, менять ассортимент и прочее.Автоматизация упорядочивает, налаживает оперативную работу и управление задачами.</div>
+        <div class="page-description container">
+            <p class="page-description-text">Автоматизация и цифровизация бизнеса- это самое эффективное вложение в бизнес сегодня. В любом бизнесе сейчас собирается много данных и они открывают интересные перспективы для работы с клиентами и не только: можно совершать допродажи, сегментировать, планировать акции, менять ассортимент и прочее.Автоматизация упорядочивает, налаживает оперативную работу и управление задачами.</p>
+        </div>
 
 <!--        <div class="automation-content">-->
         <div class="automation-advantages">
