--- a/src/crm-support.html
+++ b/src/crm-support.html
@@ -22,10 +22,10 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="crm-support-bitrix container">
-            <p class="crm-support-bitrix-title">Развитие CRM</p>
-            <p class="crm-support-bitrix-text">Порталы Битрикс24 и amoCRM имеют очень гибкий функционал, который можно настроить максимально под потребности своей компании. Важно заметить, что эти CRM изначально адаптивны к изменениям. Вы можете заказать развитие как всей компании в CRM, так и оптимизации отдельных отделов.</p>
-            <p class="crm-support-bitrix-text">Наша компания оказывает услуги по техническому сопровождению и развитию порталов Битрикс24 и amoCRM любого уровня сложности, независимо от того, когда и кем он был внедрен и доработан. Наша компания предоставляет гибкие тарифы по сопровождению и технической поддержке порталов. Мы позаботимся о вашей системе! Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
+        <div class="page-description container">
+            <p class="page-description-title">Развитие CRM</p>
+            <p class="page-description-text">Порталы Битрикс24 и amoCRM имеют очень гибкий функционал, который можно настроить максимально под потребности своей компании. Важно заметить, что эти CRM изначально адаптивны к изменениям. Вы можете заказать развитие как всей компании в CRM, так и оптимизации отдельных отделов.</p>
+            <p class="page-description-text">Наша компания оказывает услуги по техническому сопровождению и развитию порталов Битрикс24 и amoCRM любого уровня сложности, независимо от того, когда и кем он был внедрен и доработан. Наша компания предоставляет гибкие тарифы по сопровождению и технической поддержке порталов. Мы позаботимся о вашей системе! Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
         </div>
 
         <div class="crm-support-costs">
