--- a/src/integrations.html
+++ b/src/integrations.html
@@ -26,9 +26,9 @@
             </button>
         </div>
 
-        <div class="integrations-description container">
-            <p class="integrations-description-text">Интегрируя сторонние сервисы и программы вы автоматизируете некоторые процессы в вашей организации. Как правило современный сайт или CRM не обходится без связи со сторонними системами и сервисами.
-            <p class="integrations-description-text">Системам нужно общаться между собой. Мы делаем как стандартные так и нестандартные интеграции с CRM, системами складского учёта, ERP и др.</p>
+        <div class="page-description container">
+            <p class="page-description-text">Интегрируя сторонние сервисы и программы вы автоматизируете некоторые процессы в вашей организации. Как правило современный сайт или CRM не обходится без связи со сторонними системами и сервисами.
+            <p class="page-description-text">Системам нужно общаться между собой. Мы делаем как стандартные так и нестандартные интеграции с CRM, системами складского учёта, ERP и др.</p>
         </div>
 
         <div class="integrations-content">
