--- a/src/mobile.html
+++ b/src/mobile.html
@@ -20,9 +20,9 @@
 
       @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="mobile-description container">
-            <p class="mobile-description-text">Разработаем мобильное приложение или игру от идеи до релиза и отладки баланса на базе ios и android с возможностями многопоточности и API. У нас есть команда специалистов, которые смогут превратить вашу идею в прибыльный бизнес.</p>
-            <p class="mobile-description-text">При создании наши разработчики владеют навыками объектно-ориентированного программирования, языком программирования С# с использованием плагинов, а также анализируют психологию игроков, принципы баланса игры и иные нюансы геймдева.</p>
+        <div class="page-description container">
+            <p class="page-description-text">Разработаем мобильное приложение или игру от идеи до релиза и отладки баланса на базе ios и android с возможностями многопоточности и API. У нас есть команда специалистов, которые смогут превратить вашу идею в прибыльный бизнес.</p>
+            <p class="page-description-text">При создании наши разработчики владеют навыками объектно-ориентированного программирования, языком программирования С# с использованием плагинов, а также анализируют психологию игроков, принципы баланса игры и иные нюансы геймдева.</p>
         </div>
 
 
