added new files pageCases.html and .scss and includes in some files

--- a/src/1C-integration.html
+++ b/src/1C-integration.html
@@ -132,9 +132,8 @@
         </div>
     </div>
 </div>
-
-
     </section>
+    @@include('html/all-pages/pageCases.html',{})
 </main>
 @@include('html/home/prefooter-gallery.html',{})
 @@include('html/all-pages/footer.html',{})
