--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -189,34 +189,7 @@
             <img class="page-bonuses-img" src='img/internet-shops/support.png' alt="support"/>
           </div>
         </div>
-
-        <div class="page-cases-container container  ">
-        <p class="page-cases-title">Наши кейсы</p>
-        <div class="page-cases-gallery swiper">
-          <div class="swiper-wrapper">
-            <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20105.png'/>
-            <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20107.png'/>
-            <img class="swiper-slide cases-gallery-item" src='img/development/Frame%20106.png'/>
-          </div>
-        </div>
-        <div class="page-cases-swiper">
-          <div class="swiper-arrows">
-            <div class="swiper-arrow swiper-arrow-prev">
-              <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-              <!--                     <svg class="svg-arrow-slider">-->
-              <!--                        <use href="#arrow-left"/>-->
-              <!--                     </svg>-->
-            </div>
-            <div class="swiper-arrow swiper-arrow-next">
-              <!--                     <svg class="svg-arrow-slider">-->
-              <!--                        <use href="#arrow-right"/>-->
-              <!--                     </svg>-->
-              <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-            </div>
-          </div>
-          <span class="page-look"><a class="page-look-href" href="cases.html">Смотреть все</a></span>
-        </div>
-      </div>
+      @@include('html/all-pages/pageCases.html',{})
     </section>
 </main>
 @@include('html/home/prefooter.html',{})
