--- a/src/support.html
+++ b/src/support.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-
+        @@include('html/all-pages/pageCases.html',{})
     </section>
 </main>
 @@include('html/home/prefooter-gallery.html',{})
