--- a/src/development.html
+++ b/src/development.html
@@ -9,240 +9,18 @@
 @@include('html/all-pages/svg-sprites.html',{})
 @@include('html/all-pages/header.html',{})
 
+@@include('html/all-pages/breadcrumps.html',{
+"pageSectionLink": "services.html",
+"pageSectionName": "Услуги",
+"pageCurrentName": "Создание сайтов",
+})
 <main>
     <section class="development">
-
-        @@include('html/all-pages/breadcrumps.html',{
-        "pageSectionLink": "services.html",
-        "pageSectionName": "Услуги",
-        "pageCurrentName": "Создание сайтов",
-        })
-
-        <p class="page-title container">Создание сайтов</p>
-
-        <div class="page-header">
-            <img class="scissors-img" src='img/internet-shops/scissors.png' alt='scissors'>
-            <div class="page-header-block">
-                <div class="page-header-cont">
-                    <p class="page-header-text">Решение для начинающего</p>
-                    <p class="page-header-boldText">малого бизнеса</p>
-                </div>
-                <button class="page-blueBtn">То что нужно!
-                    <p class="vector-btn"> >> </p>
-                    <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
-
-
-        <div class="development-content">
-            <img class="development-content-imgMagic" src="img/development/magic_stick.png" alt="magic-stick">
-            <div class="development-content-cont container">
-
-                <div class="development-content-header">
-                    <h1>Нужен сайт?</h1>
-                    <h3>Интернет-магазин или каталог? </h3>
-                </div>
-
-                <p class="development-content-text">Наша команда специализируется в разработке сайтов на базе 1С-Битрикс, Laravel, Modx, имея значительный опыт и сертификаты в указанных продуктах. Наша компания готова вам предложить лучший вариант для сотрудничества.</p>
-
-                <div class="development-content-header2">
-                    <h1>Вам повезло!</h1>
-                    <h3>Вы уже нашли то, что искали</h3>
-                </div>
-
-                <div class="content-block-gallery">
-                    <img class="block-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
-                    <img class="block-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
-                    <img class="block-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
-                    <img class="block-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="page-pros">
-          <div class="page-pros-container container">
-
-            <p class="page-pros-title">Плюсы работы с нами</p>
-
-            <div class="page-pros-items">
-                    <div class="page-pros-item ">
-                        <svg class="svg-qualification" width="40" height="28">
-                            <use href="#qualification"/>
-                        </svg>
-                        <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
-                        <p class="pros-item-header">Квалификация</p>
-                        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                    </div>
-
-                    <div class="page-pros-item">
-                        <svg class="svg-transparency" width="42" height="30">
-                            <use href="#transparency"/>
-                        </svg>
-                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
-                        <p class="pros-item-header">Максимальная прозрачность</p>
-                        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                    </div>
-
-                    <div class="page-pros-item">
-                        <svg class="svg-result" width="38" height="44">
-                            <use href="#result"/>
-                        </svg>
-                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>-->
-                        <p class="pros-item-header">Быстрый результат</p>
-                        <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>
-                    </div>
-
-                    <div class="page-pros-item">
-                        <svg class="svg-support" width="40" height="40">
-                            <use href="#support"/>
-                        </svg>
-                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
-                        <p class="pros-item-header">Дальнейшее сопровождение</p>
-                        <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
-                    </div>
-
-                    <div class="page-pros-item">
-                        <svg class="svg-quality" width="36" height="40">
-                            <use href="#quality"/>
-                        </svg>
-                        <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
-                        <p class="pros-item-header">Знак качества</p>
-                        <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
-                    </div>
-            </div>
-          </div>
-
-          <div class="pros-container-arrows phone container">
-            <div class="swiper-vacancy-arrow-prev">
-              <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-            </div>
-            <div class="swiper-vacancy-arrow-next">
-              <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-            </div>
-          </div>
-
-        </div>
-
-<!--      <div class="page-pros">-->
-<!--        <div class="page-pros-container container">-->
-<!--          <p class="page-pros-title">Плюсы работы с нами</p>-->
-<!--          <div class="page-pros-item swiper-slide">-->
-<!--            <svg class="svg-qualification"  width="40" height="28">-->
-<!--              <use href="#qualification"/>-->
-<!--            </svg>-->
-<!--            &lt;!&ndash;               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>&ndash;&gt;-->
-<!--            <p class="pros-item-header">Квалификация</p>-->
-<!--            <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>-->
-<!--          </div>-->
-<!--          <div class="page-pros-item swiper-slide">-->
-<!--            <svg class="svg-transparency" width="42" height="30">-->
-<!--              <use href="#transparency"/>-->
-<!--            </svg>-->
-<!--            &lt;!&ndash;                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>&ndash;&gt;-->
-<!--            <p class="pros-item-header">Максимальная прозрачность</p>-->
-<!--            <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>-->
-<!--          </div>-->
-<!--          <div class="page-pros-item swiper-slide">-->
-<!--            <svg class="svg-result" width="38" height="44">-->
-<!--              <use href="#result"/>-->
-<!--            </svg>-->
-<!--            &lt;!&ndash;                <img class="pros-item-img" src="@img/icons/icons.svg#result" alt="result"/>&ndash;&gt;-->
-<!--            <p class="pros-item-header">Быстрый результат</p>-->
-<!--            <p class="pros-item-text">Создание полноценного сайта сроком до 2х недель</p>-->
-<!--          </div>-->
-<!--          <div class="page-pros-item swiper-slide">-->
-<!--            <svg class="svg-support" width="40" height="40" >-->
-<!--              <use href="#support"/>-->
-<!--            </svg>-->
-<!--            &lt;!&ndash;                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>&ndash;&gt;-->
-<!--            <p class="pros-item-header">Дальнейшее сопровождение</p>-->
-<!--            <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>-->
-<!--          </div>-->
-<!--          <div class="page-pros-item swiper-slide">-->
-<!--            <svg class="svg-quality" width="36" height="40">-->
-<!--              <use href="#quality"/>-->
-<!--            </svg>-->
-<!--            &lt;!&ndash;                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>&ndash;&gt;-->
-<!--            <p class="pros-item-header">Знак качества</p>-->
-<!--            <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-
-        <div class="development-offer">
-          <div class="development-offer-container container">
-              <p class="development-offer-title1">В зависимости от бизнес-задач будущего ресурса,</p>
-              <p class="development-offer-title2">мы готовы предложить</p>
-              <div class="development-offer-img">
-                  <button class="offer-main-btn offer-main-btn-btnBlue">Готовые сайты</button>
-                  <button class="offer-main-btn offer-main-btn-btnRed">Индивидуальные решения</button>
-                  <img class="offer-main-rightImg" src="img/development/right_hand.png" alt="right_hand"/>
-                  <img class="offer-main-leftImg" src="img/development/left_hand.png" alt="left_hand"/>
-              </div>
-          </div>
-        </div>
-
-
-
-        <div class="page-bonuses container">
-            <p class="page-bonuses-title-main">Бонусом вы получите:</p>
-            <div class="page-list">
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
-                </div>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Адаптация к мобильной версии</span>
-                </div>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
-                </div>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Построим для вас CRM;</span>
-                </div>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
-                </div>
-                <p class="page-bonuses-title-second">При необходимости мы также предлагаем:</p>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">SEO-оптимизацию</span>
-                </div>
-                <div class="page-list-item">
-<!--                    <svg class="svg-resize-horizontal-round" width="24" height="24">-->
-<!--                        <use href="#resize-horizontal-round"/>-->
-<!--                    </svg>-->
-                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
-                </div>
-            </div>
-        </div>
+      @@include('html/development/development-first-screen.html',{})
+      @@include('html/development/development-second-screen.html',{})
+      @@include('html/development/development-third-screen.html',{})
+      @@include('html/development/development-fourth-screen.html',{})
+      @@include('html/development/development-fifth-screen.html',{})
       @@include('html/all-pages/pageCases.html',{})
     </section>
 </main>
