development, internet-shops, 1C-integration, support: set up this page on files

--- a/src/html/1C-integration/1C-integration-first-screen.html
+++ b/src/html/1C-integration/1C-integration-first-screen.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<p class="page-title container">Интеграция с 1С</p>
+
+<div class="page-header">
+  <button class="page-blueBtn"><span class="phone">Начать</span><span class="desktop">Начать интеграцию</span>
+    <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
+  </button>
+</div>
