--- a/src/html/1C-integration/1C-integration-fourth-screen.html
+++ b/src/html/1C-integration/1C-integration-fourth-screen.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="integration-content-block-text-border">
+  <div class="integration-content-block-text-container container">
+    <p class="page-list-title">Существуют различные подходы к реализации интеграции с приложениями 1С, какой из них выбрать – зависит от требований задачи.</p>
+    <div class="page-list-list">
+      <div class="page-list-item">
+        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+        <span class="list-item-text">Реализация на основе механизмов интеграции, предоставляемых платформой, своего собственного специализированного API на стороне приложения 1С</span>
+      </div>
+      <div class="page-list-item">
+        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+        <span class="list-item-text">Использование механизмов интеграции платформы, которые предоставляют доступ снаружи к объектной модели приложения и не требуют доработки приложения или создания расширения.</span>
+      </div>
+      <div class="page-list-item">
+        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+        <span class="list-item-text">Использование готовых прикладных протоколов, реализованных в типовых решениях 1С.</span>
+      </div>
+    </div>
+  </div>
+</div>
