--- a/src/html/1C-integration/1C-integration-second-screen.html
+++ b/src/html/1C-integration/1C-integration-second-screen.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="integration-content container">
+  <p class="integration-content-header">Автоматизация торговли</p>
+  <div class="integration-content-block">
+    <div class="integration-content-block-text">
+      <p class="content-block-text">Интеграция сайта с 1С - это отличное комплексное решение для автоматизации торговли в вашей организации.</p>
+      <p class="content-block-header">Интеграция с 1С позволит вам:</p>
+
+      <div class="page-list-list">
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">видеть все отчеты по позициям прозрачно с автоматическим формированием</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">иметь всегда актуальный каталог, ассортимент и цены</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">избавиться от ошибок при формировании заказа и от их потерь</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">быть в курсе цепочки продаж как со стороны производителя, так и со стороны покупателя</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">видеть максимально актуальную информацию о статусе заказа</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">своевременно получать информацию об ошибках</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">автоматический перенос данных, добавление товаров за несколько минут</span>
+        </div>
+      </div>
+    </div>
+    <img class="content-img" src="img/integration/intrgration-content.png" alt="img"/>
+  </div>
+</div>
