--- a/src/html/internet-shops/internet-shops-first-screen.html
+++ b/src/html/internet-shops/internet-shops-first-screen.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="internet-shops-first-screen">
+  <p class="page-title container">Разработка интернет-магазинов</p>
+
+  <div class="page-header">
+    <img class="scissors-img" src='img/internet-shops/scissors.png' alt='scissors'>
+    <div class="page-header-block">
+      <div class="page-header-cont">
+        <p class="page-header-text">Решение для начинающего</p>
+        <p class="page-header-boldText">малого бизнеса</p>
+      </div>
+      <button class="page-blueBtn">То что нужно!
+        <p class="vector-btn"> >> </p>
+        <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <!--              <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>-->
+      </button>
+    </div>
+  </div>
+</section>
