--- a/src/html/internet-shops/internet-shops-fourth-screen.html
+++ b/src/html/internet-shops/internet-shops-fourth-screen.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="internet-shops-fourth-screen">
+  <div class="page-bonuses">
+    <div class="page-bonuses-container container">
+      <div class="page-bonuses-content">
+        <p class="page-bonuses-title-main">Бонусом вы получите:</p>
+        <div class="page-list-list">
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
+          </div>
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Адаптация к мобильной версии</span>
+          </div>
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
+          </div>
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Построим для вас CRM;</span>
+          </div>
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
+          </div>
+        </div>
+        <p class="page-bonuses-title-second">При необходимости мы также предлагаем:</p>
+        <div class="page-list-list">
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">SEO-оптимизацию</span>
+          </div>
+          <div class="page-list-item">
+            <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+            <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
+          </div>
+        </div>
+      </div>
+      <img class="page-bonuses-img" src='img/internet-shops/support.png' alt="support"/>
+    </div>
+  </div>
+</section>
