--- a/src/html/support/support-fifth-screen.html
+++ b/src/html/support/support-fifth-screen.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="page-list-block">
+  <div class="page-list-block-cont container">
+    <p class="page-list-title">В список услуги входит:</p>
+    <div class="page-list-item">
+      <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+      <span class="page-list-text">Контроль и отслеживание корректной работы сайта и хостинг-сервера</span>
+    </div>
+    <div class="page-list-item">
+      <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+      <span class="page-list-text">Редактирование контента сайта: дополнение, создание, наполнение, редизайн и доработка текущего</span>
+    </div>
+    <div class="page-list-item">
+      <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+      <span class="page-list-text">Мониторинг по безопасности: защита от вирусов, установка модулей</span>
+    </div>
+    <div class="page-list-item">
+      <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+      <span class="page-list-text">Оптимизация скорости работы сайта</span>
+    </div>
+    <div class="page-list-item">
+      <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+      <span class="page-list-text">Консультации</span>
+    </div>
+  </div>
+</div>
