--- a/src/html/support/support-first-screen.html
+++ b/src/html/support/support-first-screen.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<p class="page-title container">Поддержка сайтов</p>
+
+<div class="page-headerConsultation">
+  <button class="page-headerConsultation-blueBtn">Нужна поддержка!
+    <img class="page-headerConsultation-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
+  </button>
+</div>
+
+<div class="page-description">
+  <p class="page-description-text container">Наша команда сертифицированных специалистов оказывает сопровождение и техническую поддержку сайтов на любой стадии работы, даже если разработчиком являемся не мы. Доведем до результата ваш сайт и/или улучшим его, интегрируем ПО. У нас представлены разные пакеты услуг по функционалу сопровождения и технической поддержки. Мы постоянно повышаем качество обслуживания наших клиентов и честно относимся к ним, внедряем гибкие методики управления и реагирования на проблемы.</p>
+</div>
