--- a/src/html/support/support-second-screen.html
+++ b/src/html/support/support-second-screen.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="support-gallery">
+  <p class="support-gallery-header">Мы работаем с сайтами на базе:</p>
+  <div class="support-gallery-block container">
+    <img class="support-gallery-item" src="img/development/bitrix.png" alt="bitrix"/>
+    <img class="support-gallery-item" src="img/development/laravel-logo%201.png" alt="laravel"/>
+    <img class="support-gallery-item" src="img/development/Modx-logo%201.png" alt="Modx"/>
+    <img class="support-gallery-item" src="img/development/wordpress-logo%201.png" alt="wordpress"/>
+  </div>
+</div>
