--- a/src/html/1C-integration/1C-integration-third-screen.html
+++ b/src/html/1C-integration/1C-integration-third-screen.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="page-pros">
+
+  <div class="page-pros-container container">
+
+    <p class="page-pros-title">Плюсы работы с нами</p>
+
+    <div class="page-pros-items">
+      <div class="page-pros-item">
+        <svg class="svg-qualification"  width="40" height="28">
+          <use href="#qualification"/>
+        </svg>
+        <p class="pros-item-header">Квалификация сотрудников</p>
+        <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+      </div>
+
+      <div class="page-pros-item">
+        <svg class="svg-calendar" width="30" height="34">
+          <use href="#calendar"/>
+        </svg>
+        <p class="pros-item-header">Опыт более 12 лет</p>
+        <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+      </div>
+
+      <div class="page-pros-item">
+        <svg class="svg-complex" width="38" height="40">
+          <use href="#complex"/>
+        </svg>
+        <p class="pros-item-header">Индивидуальный подход</p>
+        <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+      </div>
+
+      <div class="page-pros-item">
+        <svg class="svg-transparency" width="42" height="30">
+          <use href="#transparency"/>
+        </svg>
+        <p class="pros-item-header">Максимальная прозрачность</p>
+        <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+      </div>
+    </div>
+  </div>
+</div>
