--- a/src/html/internet-shops/internet-shops-third-screen.html
+++ b/src/html/internet-shops/internet-shops-third-screen.html
@@ -1,10 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<section class="internet-shops-third-screen">
+  <div class="page-pros">
+
+    <div class="page-pros-container container">
+
+      <p class="page-pros-title">Плюсы работы с нами</p>
+
+      <div class="page-pros-items">
+
+        <div class="page-pros-item">
+          <svg class="svg-complex" width="38" height="40">
+            <use href="#complex"/>
+          </svg>
+          <!--               <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>-->
+          <p class="pros-item-header">Комплексный подход</p>
+          <p class="pros-item-text">Командная работа над проектом - залог успеха</p>
+        </div>
+
+        <div class="page-pros-item">
+          <svg class="svg-calendar" width="30" height="34">
+            <use href="#calendar"/>
+          </svg>
+          <!--               <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>-->
+          <p class="pros-item-header">Опыт более 12 лет</p>
+          <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+        </div>
+
+        <div class="page-pros-item">
+          <svg class="svg-qualification"  width="40" height="28">
+            <use href="#qualification"/>
+          </svg>
+          <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
+          <p class="pros-item-header">Квалификация</p>
+          <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+        </div>
+
+        <div class="page-pros-item">
+          <svg class="svg-transparency" width="42" height="30">
+            <use href="#transparency"/>
+          </svg>
+          <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
+          <p class="pros-item-header">Максимальная прозрачность</p>
+          <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+        </div>
+
+        <div class="page-pros-item">
+          <svg class="svg-support" width="40" height="40" >
+            <use href="#support"/>
+          </svg>
+          <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
+          <p class="pros-item-header">Дальнейшее сопровождение</p>
+          <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
+        </div>
+
+        <div class="page-pros-item">
+          <svg class="svg-quality" width="36" height="40">
+            <use href="#quality"/>
+          </svg>
+          <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
+          <p class="pros-item-header">Знак качества</p>
+          <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="pros-container-arrows phone container">
+      <div class="swiper-vacancy-arrow-prev">
+        <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+      </div>
+      <div class="swiper-vacancy-arrow-next">
+        <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
+      </div>
+    </div>
+  </div>
+</section>
