--- a/src/internet-shops.html
+++ b/src/internet-shops.html
@@ -10,185 +10,18 @@
 @@include('html/all-pages/header.html',{})
 
 <main>
-    <section class="internet">
 
+    <section class="internet">
       @@include('html/all-pages/breadcrumps.html',{
       "pageSectionLink": "services.html",
       "pageSectionName": "Услуги",
       "pageCurrentName": "Разработка интернет-магазинов",
       })
-
-        <p class="page-title container">Разработка интернет-магазинов</p>
-
-        <div class="page-header">
-          <img class="scissors-img" src='img/internet-shops/scissors.png' alt='scissors'>
-          <div class="page-header-block">
-            <div class="page-header-cont">
-              <p class="page-header-text">Решение для начинающего</p>
-              <p class="page-header-boldText">малого бизнеса</p>
-            </div>
-            <button class="page-blueBtn">То что нужно!
-              <p class="vector-btn"> >> </p>
-              <svg class="svg-vector-btn" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 11L6 6L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-<!--              <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>-->
-            </button>
-          </div>
-        </div>
-
-        <div class="internet-content">
-          <div class="container">
-            <p class="internet-content-header">Продавайте товары онлайн</p>
-            <div class="internet-content-block">
-              <div class="content-block">
-                <p class="content-block-text">Сегодня интернет-магазин один из важных каналов продаж. Наша компания занимается созданием интернет-магазинов на базе 1С-Битрикс уже более 5-ти лет. Имеем хороший опыт интеграции с различными CRM системами, 1С и других системами бухучета.</p>
-                <p class="content-block-text">Для нас важно, чтобы интернет-магазин был хорошо продуман, касаемо сортировки товаров, фильтрации позиций, интеграции и т.д. Именно поэтому над проектом работает целая команда в составе бизнес-аналитика, дизайнера, маркетолога, верстальщика, разработчика.</p>
-              </div>
-              <img class="content-block-img" src='img/internet-shops/internet.png' alt="internet"/>
-            </div>
-          </div>
-        </div>
-<!--        <hr/>-->
-
-      <div class="page-pros">
-
-        <div class="page-pros-container container">
-
-          <p class="page-pros-title">Плюсы работы с нами</p>
-
-          <div class="page-pros-items">
-
-            <div class="page-pros-item">
-              <svg class="svg-complex" width="38" height="40">
-                <use href="#complex"/>
-              </svg>
-              <!--               <img class="pros-item-img" src="@img/icons/icons.svg#complex" alt="complex"/>-->
-              <p class="pros-item-header">Комплексный подход</p>
-              <p class="pros-item-text">Командная работа над проектом - залог успеха</p>
-            </div>
-
-            <div class="page-pros-item">
-              <svg class="svg-calendar" width="30" height="34">
-                <use href="#calendar"/>
-              </svg>
-              <!--               <img class="pros-item-img" src="@img/icons/icons.svg#calendar" alt="calendar"/>-->
-              <p class="pros-item-header">Опыт более 12 лет</p>
-              <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-            </div>
-
-            <div class="page-pros-item">
-              <svg class="svg-qualification"  width="40" height="28">
-                <use href="#qualification"/>
-              </svg>
-              <!--               <img class="pros-item-img" src="@img/icons/icons.svg#qualification" alt="qualification"/>-->
-              <p class="pros-item-header">Квалификация</p>
-              <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-            </div>
-
-            <div class="page-pros-item">
-              <svg class="svg-transparency" width="42" height="30">
-                <use href="#transparency"/>
-              </svg>
-              <!--                <img class="pros-item-img" src="@img/icons/icons.svg#transparency" alt="transparency"/>-->
-              <p class="pros-item-header">Максимальная прозрачность</p>
-              <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-            </div>
-
-            <div class="page-pros-item">
-              <svg class="svg-support" width="40" height="40" >
-                <use href="#support"/>
-              </svg>
-              <!--                <img class="pros-item-img" src="@img/icons/icons.svg#support" alt="support"/>-->
-              <p class="pros-item-header">Дальнейшее сопровождение</p>
-              <p class="pros-item-text">Мы всегда можем помочь и всегда рядом</p>
-            </div>
-
-            <div class="page-pros-item">
-              <svg class="svg-quality" width="36" height="40">
-                <use href="#quality"/>
-              </svg>
-              <!--                <img class="pros-item-img" src="@img/icons/icons.svg#quality" alt="quality"/>-->
-              <p class="pros-item-header">Знак качества</p>
-              <p class="pros-item-text">Гарантийное обслуживание после сдачи проекта</p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="pros-container-arrows phone container">
-          <div class="swiper-vacancy-arrow-prev">
-            <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-          </div>
-          <div class="swiper-vacancy-arrow-next">
-            <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-          </div>
-        </div>
-      </div>
-
-
-        <div class="page-bonuses">
-          <div class="page-bonuses-container container">
-            <div class="page-bonuses-content">
-              <p class="page-bonuses-title-main">Бонусом вы получите:</p>
-              <div class="page-list-list">
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                   <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Хостинг бесплатно + SSL сертификат на 1 год в подарок;</span>
-                </div>
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Адаптация к мобильной версии</span>
-                </div>
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Базовая настройка SEO и подключение основных метрик</span>
-                </div>
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Построим для вас CRM;</span>
-                </div>
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Консультация по настройке контекстной рекламы для вашего сайта.</span>
-                </div>
-              </div>
-              <p class="page-bonuses-title-second">При необходимости мы также предлагаем:</p>
-              <div class="page-list-list">
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">SEO-оптимизацию</span>
-                </div>
-                <div class="page-list-item">
-                  <svg class="svg-resize-horizontal-round" width="24" height="24">
-                    <use href="#resize-horizontal-round"/>
-                  </svg>
-                  <!--                    <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>-->
-                  <span class="list-item-text">Настройка контекстной рекламы под ключ</span>
-                </div>
-              </div>
-            </div>
-            <img class="page-bonuses-img" src='img/internet-shops/support.png' alt="support"/>
-          </div>
-        </div>
+      
+      @@include('html/internet-shops/internet-shops-first-screen.html',{})
+      @@include('html/internet-shops/internet-shops-second-screen.html',{})
+      @@include('html/internet-shops/internet-shops-third-screen.html',{})
+      @@include('html/internet-shops/internet-shops-fourth-screen.html',{})
       @@include('html/all-pages/pageCases.html',{})
     </section>
 </main>
